Changelog
=========

11.0-dev - (unreleased)
-----------------------
* Change: cleaned pl_document_related.pt of feeds and pages macros
  since they are no longer found within document_relateditems.pt
  This avoids a relatedItems viewlet error
  [ichimdav refs #22604]

10.9 - (2014-12-23)
-------------------
* Change: added basic style for figures
  [demarant, ichimdav refs #21882]
* Bug fix: Show goto_comments message only when comments are enabled
  [voineali refs demarant]
* Feature: added figureContainer class to presentation_styles.css used by
  the figures title and image div which can be added as an TinyMCE style
  [ichimdav refs #21882]
* Change: removed float clearing for h tags within print.css in order to avoid
  clearing floats when not expected. If clearing is expected a div with
  clearFloats can be added
  [ichimdav refs #22212]
* Bug fix: Fixed frontpage_macros to work with Chameleon
  [voineali refs #21919]
* Bug fix: Fixed main_template to work with Chameleon
  [voineali refs #21919]

10.8 - (2014-11-20)
-------------------
* Bug fix: Patched unlockOnFormUnload.js to stop calling refresh_lock via AJAX
  if the user's auth cookie expired or an error occurred
  [voineali refs #21857]
* Bug fix: harmonise table style on web and print.
  [demarant fixes #21009]
* Change: set font size to 9pt for printing from web and PDF.
  [demarant fixes #21455 and refs #20690]
* Bug fix: fixed CSS for locked icon displayed under plone.belowcontenttitle.documentbyline viewlet
  [ghicaale refs #21457]
* Feature: timeout dialog is now aware of ajax calls which modify the object
  [ghicaale refs #21457]
* Bug fix: fixed timeout dialog to be aware of DaViz ajax calls
  [ghicaale refs #21457]

10.7 - (2014-10-15)
-------------------
* Bug fix: Speedup History overlay within plone.app.viewlet by removing expensive
  check "isUpToDate"
  [voineali refs #21254]
* Bug fix: hide certain elements from print.
  [demarant]