@@ -259,6 +259,14 @@
         permission="zope2.View"
         />
 
+    <browser:viewlet
+        name="eea.design.export"
+        layer=".interfaces.IEEACommonLayer"
+        manager="plone.app.layout.viewlets.interfaces.IBelowContentTitle"
+        class=".viewlets.ExportActionsViewlet"
+        permission="zope2.View"
+        />
+
     <!-- Browser pages -->
 
     <browser:page
