@@ -1,0 +1,21 @@
+<div tal:omit-tag="" i18n:domain="eea">
+
+    <div class="documentExportActions">
+        <tal:docactions tal:condition="view/actions">
+
+            <ul tal:define="normalizeString nocall: context/@@plone/normalizeString">
+                  <li tal:repeat="daction view/actions"
+                      tal:attributes="id python:'export-action-' + normalizeString(daction['id'])">
+                      <a class="pull-left"
+                         tal:attributes="href daction/url;
+                                         target daction/link_target|nothing;
+                                         title daction/description|daction/title">
+                        <span tal:attributes="class daction/icon"></span>
+                        <span class="export-action-title" tal:content="daction/title">Action title</span>
+                      </a>
+                  </li>
+            </ul>
+        </tal:docactions>
+
+    </div>
+</div>
